[BUGFIX] Use correct argument in textfield
Add missing "v" for argument key "value".

--- a/Resources/Private/Partials/Cart/ProductForm/ProductList.html
+++ b/Resources/Private/Partials/Cart/ProductForm/ProductList.html
@@ -22,7 +22,7 @@
             <f:form.textfield
                 class="form-control form-control-inline"
                 type="number"
-                alue="{product.quantity}"
+                value="{product.quantity}"
                 name="quantities[{product.id}]"/>
         </td>
         <td class="col-md-2 text-right">
