[BUGFIX] Remove superfluous method
Previous commit introduced a superfluous method
`getIsUseable()` which is not necessary because
`isUseable` works as well with fluid for
`{coupon.useable}`.

--- a/Resources/Private/Partials/Cart/OrderForm/Coupon.html
+++ b/Resources/Private/Partials/Cart/OrderForm/Coupon.html
@@ -18,7 +18,7 @@
                                 <span>
                                     <cart:format.currency currencySign="{cart.currencySign}">{coupon.translatedDiscount}</cart:format.currency>
                                 </span>
-                                <f:if condition="{coupon.isUseable}">
+                                <f:if condition="{coupon.useable}">
                                     <f:else>
                                         <span class="coupon-hint not-usable">
                                             <f:translate key="tx_cart_domain_model_coupon.code.not_useable"/>
