[BUGFIX] Payment+shipping depending on `isNetCart`
Depending on the TypoScript setting
`plugin.tx_cart.settings.isNetCart` the costs for
shipping and payment are shown as gross or net
values.

--- a/Resources/Private/Partials/Cart/OrderForm/PaymentMethod.html
+++ b/Resources/Private/Partials/Cart/OrderForm/PaymentMethod.html
@@ -31,7 +31,12 @@
                             </f:if>
                         </div>
                         <div class="method-item-info">
-                            <cart:format.currency currencySign="{cart.currencySign}">{payment.gross}</cart:format.currency>
+                            <cart:format.currency currencySign="{cart.currencySign}">
+                                <f:if condition="{cart.netCart}">
+                                    <f:then>{payment.net}</f:then>
+                                    <f:else>{payment.gross}</f:else>
+                                </f:if>
+                            </cart:format.currency>
                         </div>
                     </f:if>
                 </f:for>
