[TASK] Improve naming and adapt parameter structure

--- a/Resources/Private/Partials/Cart/ProductForm/ProductList.html
+++ b/Resources/Private/Partials/Cart/ProductForm/ProductList.html
@@ -6,13 +6,13 @@
     <tr class="{f:if(condition: product.quantityInRange, then: '', else: 'danger')}">
         <td colspan="2" class="col-md-6">
             <div class="product-name">
-                <f:if condition="{product.detailViewParameter.pageUid} && {product.detailViewParameter.extensionName}">
+                <f:if condition="{product.detailPageParameter.pageUid} && {product.detailPageParameter.extensionName}">
                     <f:then>
                         <f:link.action
-                            pageUid="{product.detailViewParameter.pageUid}"
-                            extensionName="{product.detailViewParameter.extensionName}"
-                            pluginName="{product.detailViewParameter.pluginName}"
-                            controller="{product.detailViewParameter.controller}"
+                            pageUid="{product.detailPageParameter.pageUid}"
+                            extensionName="{product.detailPageParameter.extensionName}"
+                            pluginName="{product.detailPageParameter.pluginName}"
+                            controller="{product.detailPageParameter.controller}"
                             arguments="{product: product.productId}">
                             {product.title} {f:if(condition:'{product.feVariant.value}',then:'- {product.feVariant.value}')}
                         </f:link.action>
@@ -74,13 +74,13 @@
                 <td class="col-md-1">&nbsp;</td>
                 <td class="col-md-5">
                     <div class="product-name">
-                        <f:if condition="{product.detailViewParameter.pageUid} && {product.detailViewParameter.extensionName}">
+                        <f:if condition="{product.detailPageParameter.pageUid} && {product.detailPageParameter.extensionName}">
                             <f:then>
                                 <f:link.action
-                                    pageUid="{product.detailViewParameter.pageUid}"
-                                    extensionName="{product.detailViewParameter.extensionName}"
-                                    pluginName="{product.detailViewParameter.pluginName}"
-                                    controller="{product.detailViewParameter.controller}"
+                                    pageUid="{product.detailPageParameter.pageUid}"
+                                    extensionName="{product.detailPageParameter.extensionName}"
+                                    pluginName="{product.detailPageParameter.pluginName}"
+                                    controller="{product.detailPageParameter.controller}"
                                     arguments="{product: product.productId}">
                                     {variant.title}
                                 </f:link.action>
