[BUGFIX] Use correct label in BE pagination
Replace a copy-paste error and show the correct
label instead in the counter of the pagination
of the BE.

--- a/Resources/Private/Partials/Utility/Paginator.html
+++ b/Resources/Private/Partials/Utility/Paginator.html
@@ -31,7 +31,7 @@
 
         <li class="page-item">
         <span class="page-link">
-            <f:translate key="LLL:EXT:sf_event_mgt/Resources/Private/Language/locallang_be.xlf:administration.pagination.records" /> {pagination.startRecordNumber} - {pagination.endRecordNumber}
+            <f:translate key="tx_cart.backend.pagination.records" /> {pagination.startRecordNumber} - {pagination.endRecordNumber}
         </span>
         </li>
 
