[TASK] Allow more than one CartPreview in page
Relates: #614

--- a/Resources/Private/Templates/Cart/CartPreview/Show.html
+++ b/Resources/Private/Templates/Cart/CartPreview/Show.html
@@ -4,7 +4,7 @@
 <f:layout name="Plain"/>
 
 <f:section name="main">
-    <div id="cart-preview" class="tx-cart cart-preview">
+    <div class="tx-cart cart-preview">
         <div class="cart-preview-content">
             <span class="cart-preview-count">{cart.count}</span> <f:translate key="tx_cart.plugin.mini_cart.products_in_cart" />
         </div>
